--- a/index.html
+++ b/index.html
@@ -395,29 +395,27 @@
         };
 
         const DashboardView = () => {
-            const { clients, followups, ideas, setView, setFollowupForm, setIdeaForm, fileInputRef, handleImport, exportToExcel, handleCleanDuplicates, handleLogout } = useContext(CRMContext);
+            const { clients, reports, followups, ideas, setView, setFollowupForm, setIdeaForm, fileInputRef, handleImport, exportToExcel, handleCleanDuplicates, handleLogout } = useContext(CRMContext);
             return (
                 <div className="space-y-6 animate-fade-in pb-32">
                     <header className="mb-6"><h1 className="text-2xl font-bold text-gray-800">Dashboard</h1></header>
                     <div className="grid grid-cols-3 md:grid-cols-4 gap-4">
-                        <div className="bg-white p-5 rounded-2xl shadow-sm border border-gray-100"><div className="flex items-center space-x-2 mb-2 text-blue-600"><Icons.Users size={16} /><span className="text-[10px] md:text-xs font-bold uppercase text-gray-400">Clienti</span></div><div className="text-3xl font-bold text-gray-800">{clients.length}</div></div>
-                        <div className="bg-white p-5 rounded-2xl shadow-sm border border-gray-100"><div className="flex items-center space-x-2 mb-2 text-yellow-600"><Icons.Target size={16} /><span className="text-[10px] md:text-xs font-bold uppercase text-gray-400">Offerte</span></div><div className="text-3xl font-bold text-gray-800">{followups.length}</div></div>
-                        <div className="bg-white p-5 rounded-2xl shadow-sm border border-gray-100"><div className="flex items-center space-x-2 mb-2 text-red-600"><Icons.Lightbulb size={16} /><span className="text-[10px] md:text-xs font-bold uppercase text-gray-400">Idee</span></div><div className="text-3xl font-bold text-gray-800">{ideas.length}</div></div>
+                        <div onClick={() => setView('clients')} className="bg-white p-5 rounded-2xl shadow-sm border border-gray-100 cursor-pointer active:scale-95 transition-transform"><div className="flex items-center space-x-2 mb-2 text-blue-600"><Icons.Users size={16} /><span className="text-[10px] md:text-xs font-bold uppercase text-gray-400">Clienti</span></div><div className="text-3xl font-bold text-gray-800">{clients.length}</div></div>
+                        <div onClick={() => setView('followups')} className="bg-white p-5 rounded-2xl shadow-sm border border-gray-100 cursor-pointer active:scale-95 transition-transform"><div className="flex items-center space-x-2 mb-2 text-yellow-600"><Icons.Target size={16} /><span className="text-[10px] md:text-xs font-bold uppercase text-gray-400">Offerte</span></div><div className="text-3xl font-bold text-gray-800">{followups.length}</div></div>
+                        <div onClick={() => setView('ideas')} className="bg-white p-5 rounded-2xl shadow-sm border border-gray-100 cursor-pointer active:scale-95 transition-transform"><div className="flex items-center space-x-2 mb-2 text-red-600"><Icons.Lightbulb size={16} /><span className="text-[10px] md:text-xs font-bold uppercase text-gray-400">Idee</span></div><div className="text-3xl font-bold text-gray-800">{ideas.length}</div></div>
+                        <div onClick={() => setView('list')} className="bg-white p-5 rounded-2xl shadow-sm border border-gray-100 cursor-pointer active:scale-95 transition-transform"><div className="flex items-center space-x-2 mb-2 text-gray-600"><Icons.ClipboardList size={16} /><span className="text-[10px] md:text-xs font-bold uppercase text-gray-400">Report</span></div><div className="text-3xl font-bold text-gray-800">{reports.length}</div></div>
                     </div>
                     
                     <div className="bg-white p-6 rounded-2xl shadow-sm border border-gray-100 flex flex-col items-center text-center">
-                        <button onClick={() => setView('create')} className="w-full bg-gray-600 hover:bg-gray-700 text-white py-4 rounded-xl font-bold shadow-lg shadow-gray-200 flex justify-center items-center gap-2 active:scale-95 transition-all mb-3 text-lg"><Icons.Plus size={22} /> Nuovo Report</button>
-                        <button onClick={() => setView('list')} className="w-full text-gray-600 font-bold bg-gray-50 py-3 rounded-xl border border-gray-200 active:scale-95 transition-transform hover:bg-gray-100 flex justify-center items-center gap-2"><Icons.ClipboardList size={18} /> Storico Report</button>
+                        <button onClick={() => setView('create')} className="w-full bg-gray-600 hover:bg-gray-700 text-white py-4 rounded-xl font-bold shadow-lg shadow-gray-200 flex justify-center items-center gap-2 active:scale-95 transition-all text-lg"><Icons.Plus size={22} /> Nuovo Report</button>
                     </div>
 
                     <div className="bg-white p-6 rounded-2xl shadow-sm border border-gray-100 flex flex-col items-center text-center">
-                        <button onClick={() => { setFollowupForm({}); setView('createFollowup'); }} className="w-full bg-yellow-500 hover:bg-yellow-600 text-white py-4 rounded-xl font-bold shadow-lg shadow-yellow-200 flex justify-center items-center gap-2 active:scale-95 transition-all mb-3 text-lg"><Icons.Plus size={22} /> Nuova Offerta</button>
-                        <button onClick={() => setView('followups')} className="w-full text-yellow-700 font-bold bg-yellow-50 py-3 rounded-xl border border-yellow-100 active:scale-95 transition-transform hover:bg-yellow-100 flex justify-center items-center gap-2"><Icons.ClipboardList size={18} /> Storico Offerte</button>
+                        <button onClick={() => { setFollowupForm({}); setView('createFollowup'); }} className="w-full bg-yellow-500 hover:bg-yellow-600 text-white py-4 rounded-xl font-bold shadow-lg shadow-yellow-200 flex justify-center items-center gap-2 active:scale-95 transition-all text-lg"><Icons.Plus size={22} /> Nuova Offerta</button>
                     </div>
 
                     <div className="bg-white p-6 rounded-2xl shadow-sm border border-gray-100 flex flex-col items-center text-center">
-                        <button onClick={() => { setIdeaForm({}); setView('createIdea'); }} className="w-full bg-red-600 hover:bg-red-700 text-white py-4 rounded-xl font-bold shadow-lg shadow-red-200 flex justify-center items-center gap-2 active:scale-95 transition-all mb-3 text-lg"><Icons.Plus size={22} /> Nuova Idea</button>
-                        <button onClick={() => setView('ideas')} className="w-full text-red-700 font-bold bg-red-50 py-3 rounded-xl border border-red-100 active:scale-95 transition-transform hover:bg-red-100 flex justify-center items-center gap-2"><Icons.ClipboardList size={18} /> Storico Idee</button>
+                        <button onClick={() => { setIdeaForm({}); setView('createIdea'); }} className="w-full bg-red-600 hover:bg-red-700 text-white py-4 rounded-xl font-bold shadow-lg shadow-red-200 flex justify-center items-center gap-2 active:scale-95 transition-all text-lg"><Icons.Plus size={22} /> Nuova Idea</button>
                     </div>
 
                     <div className="mt-8 grid grid-cols-2 md:grid-cols-4 gap-3">
