--- a/index.html
+++ b/index.html
@@ -406,15 +406,9 @@
                         <div onClick={() => setView('list')} className="bg-white p-5 rounded-2xl shadow-sm border border-gray-100 cursor-pointer active:scale-95 transition-transform"><div className="flex items-center space-x-2 mb-2 text-gray-600"><Icons.ClipboardList size={16} /><span className="text-[10px] md:text-xs font-bold uppercase text-gray-400">Report</span></div><div className="text-3xl font-bold text-gray-800">{reports.length}</div></div>
                     </div>
                     
-                    <div className="bg-white p-6 rounded-2xl shadow-sm border border-gray-100 flex flex-col items-center text-center">
+                    <div className="bg-white p-6 rounded-2xl shadow-sm border border-gray-100 flex flex-col items-center text-center gap-3">
                         <button onClick={() => setView('create')} className="w-full bg-gray-600 hover:bg-gray-700 text-white py-4 rounded-xl font-bold shadow-lg shadow-gray-200 flex justify-center items-center gap-2 active:scale-95 transition-all text-lg"><Icons.Plus size={22} /> Nuovo Report</button>
-                    </div>
-
-                    <div className="bg-white p-6 rounded-2xl shadow-sm border border-gray-100 flex flex-col items-center text-center">
                         <button onClick={() => { setFollowupForm({}); setView('createFollowup'); }} className="w-full bg-yellow-500 hover:bg-yellow-600 text-white py-4 rounded-xl font-bold shadow-lg shadow-yellow-200 flex justify-center items-center gap-2 active:scale-95 transition-all text-lg"><Icons.Plus size={22} /> Nuova Offerta</button>
-                    </div>
-
-                    <div className="bg-white p-6 rounded-2xl shadow-sm border border-gray-100 flex flex-col items-center text-center">
                         <button onClick={() => { setIdeaForm({}); setView('createIdea'); }} className="w-full bg-red-600 hover:bg-red-700 text-white py-4 rounded-xl font-bold shadow-lg shadow-red-200 flex justify-center items-center gap-2 active:scale-95 transition-all text-lg"><Icons.Plus size={22} /> Nuova Idea</button>
                     </div>
 
