--- a/index.html
+++ b/index.html
@@ -1875,21 +1875,44 @@
                     });
                 }
 
-                const stagesList = day.stages && day.stages.length > 0 
-                    ? day.stages.map(s => s.name).join(' - ')
-                    : 'Nessuna tappa';
+                // COSTRUZIONE LISTA TAPPE ESPANSA (MODIFICA RICHIESTA)
+                let stagesExpandedHtml = '';
+                if (day.stages && day.stages.length > 0) {
+                    stagesExpandedHtml = '<div class="mt-3 border-t border-stone-100 pt-2 space-y-2">';
+                    day.stages.forEach((s, idx) => {
+                         const typeIcon = s.isVisit 
+                            ? `<span class="bg-orange-100 text-orange-600 p-1 rounded-full text-[10px] flex-shrink-0"><i class="ph-fill ph-ticket"></i></span>` 
+                            : `<span class="bg-green-100 text-green-600 p-1 rounded-full text-[10px] flex-shrink-0"><i class="ph-bold ph-car"></i></span>`;
+                         
+                         const timeDisplay = s.start ? `<span class="font-mono text-[10px] text-stone-500 bg-stone-50 border border-stone-200 px-1 rounded ml-auto flex-shrink-0">${s.start}</span>` : '';
+
+                         stagesExpandedHtml += `
+                            <div class="flex items-center gap-2">
+                                <span class="text-[10px] text-stone-400 font-mono w-4 flex-shrink-0 text-right">${idx+1}.</span>
+                                ${typeIcon}
+                                <span class="text-sm font-bold text-stone-700 leading-tight">${s.name}</span>
+                                ${timeDisplay}
+                            </div>
+                         `;
+                    });
+                    stagesExpandedHtml += '</div>';
+                } else {
+                    stagesExpandedHtml = '<div class="mt-3 text-xs text-stone-400 italic">Nessuna tappa inserita.</div>';
+                }
 
                 card.innerHTML = `
                     <div class="flex justify-between items-start mb-2">
                         <div class="flex-grow pr-2">
                             <span class="text-[10px] font-black text-orange-500 uppercase tracking-widest">GIORNO ${day.chronoId}</span>
-                            <h3 class="font-bold text-stone-800 text-lg leading-tight mb-1">${stagesList}</h3>
-                            <div class="text-stone-500 text-sm font-medium uppercase tracking-wide">${day.title || 'Stato non indicato'}</div>
+                            <h3 class="font-bold text-stone-800 text-lg leading-tight mb-1">${day.title || 'Stato non indicato'}</h3>
                         </div>
                         <div class="bg-stone-100 text-stone-600 px-2 py-1 rounded text-xs font-bold text-center min-w-[60px] flex-shrink-0">${dateStr}</div>
                     </div>
-                    <p class="text-sm text-stone-600 mb-3">${day.description || 'Nessuna descrizione.'}</p>
-                    <div class="flex items-center gap-3 text-xs font-bold text-black border-t border-stone-100 pt-2 overflow-x-auto whitespace-nowrap scrollbar-hide">
+                    <p class="text-sm text-stone-600 mb-2">${day.description || ''}</p>
+                    
+                    ${stagesExpandedHtml}
+
+                    <div class="flex items-center gap-3 text-xs font-bold text-black border-t border-stone-100 pt-2 mt-3 overflow-x-auto whitespace-nowrap scrollbar-hide">
                         <span class="flex items-center gap-1"><i class="ph-fill ph-flag-checkered text-orange-600"></i> ${visitCount} Tappe</span>
                         ${tripCount > 0 ? `<span class="flex items-center gap-1"><i class="ph-fill ph-car text-orange-600"></i> ${tripCount} Road Trip</span>` : ''}
                         <span class="flex items-center gap-1"><i class="ph-fill ph-road-horizon text-orange-600"></i> ${totKm.toFixed(0)} km</span>
