--- a/index.html
+++ b/index.html
@@ -846,7 +846,12 @@
 
             return (
                 <div className="animate-fade-in pb-32">
-                    <h2 className="text-xl font-bold mb-6">Storico Ordini</h2>
+                    <div className="flex justify-between items-center mb-6">
+                        <h2 className="text-xl font-bold text-gray-800">Storico Ordini</h2>
+                        <button onClick={() => { setOrderForm({}); setView('createOrder'); }} className="bg-blue-600 text-white px-4 py-2 rounded-lg text-sm font-bold flex items-center gap-1">
+                            <Icons.Plus size={16}/> Nuovo
+                        </button>
+                    </div>
                     
                     <div className="bg-blue-600 p-5 rounded-2xl shadow-lg text-white mb-6">
                         <div className="text-xs font-bold uppercase opacity-80 mb-1">Totale Complessivo</div>
